# ChatMC

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
chatmc/: chatmc.h  chatmc_key.cpp  chatmc_key.hpp  library.properties
inc/: chatmc.hpp  chatmc_keyer.hpp  chatmc_spkr.hpp  chatmc_sym.hpp
scripts/: deploy.py  setupOS.py  setupOS_BBB.py
scripts/utils/: cmd.py
src/: main.cpp
src/chatmc/: chatmc_sym.cpp
